--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 # millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", label = "2024.6-release" }
-# millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "master" }
-millegrilles_common_rust = { path = "/home/mathieu/RustroverProjects/millegrilles_common_rust" }
+millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "master" }
+# millegrilles_common_rust = { path = "/home/mathieu/RustroverProjects/millegrilles_common_rust" }
 
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
 env_logger = "0.9.0"
