--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "millegrilles_documents"
-version = "2024.8.24"
+version = "2024.9.27"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", label = "2024.8-release" }
-# millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "master" }
+# millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", label = "2024.9-release" }
+millegrilles_common_rust = { git = "https://github.com/dugrema/millegrilles_common_rust.git", branch = "master" }
 # millegrilles_common_rust = { path = "/home/mathieu/RustroverProjects/millegrilles_common_rust" }
 
 log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
